created numpy arrays of images

--- a/model.ipynb
+++ b/model.ipynb
@@ -44,42 +44,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
     "data.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "data['center'][2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "A.shape"
    ]
   },
   {
@@ -93,20 +62,59 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [],
    "source": [
-    "filename = data['center'][1]\n",
-    "#print(file)\n",
+    "for i in data['center']:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "img_path = data['center'][1]\n",
+    "#print(img_path)\n",
+    "num_samples = len(data)\n",
+    "i=0\n",
+    "for row in data['center']:\n",
+    "    #print(i)\n",
+    "    I = cv2.imread(img_path)\n",
+    "    b,g,r = cv2.split(I)\n",
+    "    I = cv2.merge([r,g,b])\n",
+    "    #cv2.imwrite('I.jpg',I)\n",
+    "    I = I[50:,:]\n",
+    "    I = cv2.resize(I,None,fx=0.25,fy=0.25,interpolation=cv2.INTER_AREA)\n",
+    "    plt.imshow(I)\n",
+    "    \n",
+    "    # https://carnd-forums.udacity.com/questions/32716893/\n",
+    "    # does-anyone-know-how-to-make-multiple-images-into-4d-arrays-like-pickled-data#\n",
+    "    #arr = np.zeros((num_examples, width, height, channels))\n",
     "\n",
-    "I = cv2.imread(filename)\n",
-    "b,g,r = cv2.split(I)\n",
-    "I = cv2.merge([r,g,b])\n",
-    "#cv2.imwrite('I.jpg',I)\n",
-    "Im = I[50:,:]\n",
-    "Im = cv2.resize(Im,None,fx=0.25,fy=0.25,interpolation=cv2.INTER_AREA)\n",
-    "plt.imshow(Im)"
+    "    X_train = np.zeros((num_samples, I.shape[0], I.shape[1], I.shape[2]))\n",
+    "    X_train[i, :, :, :] = I\n",
+    "    i=i+1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Labels"
    ]
   },
   {
@@ -117,7 +125,8 @@
    },
    "outputs": [],
    "source": [
-    "Im.shape"
+    "# Convert a pandas dataframe (df) to a numpy ndarray\n",
+    "y_train = data['steering'].values"
    ]
   },
   {
@@ -147,7 +156,19 @@
    },
    "outputs": [],
    "source": [
-    "data.tail()"
+    "data.shape\n",
+    "len(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "I.shape[2]"
    ]
   },
   {
@@ -158,19 +179,12 @@
    },
    "outputs": [],
    "source": [
-    "data.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Import Training Data from CSV File\n",
-    "import csv"
+    "# https://carnd-forums.udacity.com/questions/32716893/\n",
+    "# does-anyone-know-how-to-make-multiple-images-into-4d-arrays-like-pickled-data#\n",
+    "#arr = np.zeros((num_examples, width, height, channels))\n",
+    "\n",
+    "features = np.zeros((len(data), I.shape[1], I.shape[0], I.shape[2]))\n",
+    "features[i, :, :, :] = I\n"
    ]
   },
   {
@@ -181,15 +195,7 @@
    },
    "outputs": [],
    "source": [
-    "# Main Driving Log\n",
-    "data_c = csv.reader(open('CarSim_data/driving_log.csv'), delimiter=\",\",quotechar='|')\n",
-    "\n",
-    "\n",
-    "# Create Empty Arrays for Center Driving Log Data\n",
-    "img_center = []\n",
-    "img_left = []\n",
-    "img_right = []\n",
-    "steering = []"
+    "arr.shape"
    ]
   },
   {
@@ -199,66 +205,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "# Populate Center Driving Arrays\n",
-    "for row in data_c:\n",
-    "      img_center.append(row[0])\n",
-    "      img_left.append(row[1])\n",
-    "      img_right.append(row[2])\n",
-    "      steering.append(row[3])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "print(img_center)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Center Array\n",
-    "img_center = np.asarray(img_center)\n",
-    "img_left = np.asarray(img_left)\n",
-    "img_right = np.asarray(img_right)\n",
-    "\n",
-    "steering = np.asarray(steering, dtype=np.float32)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "img_center.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "\n",
-    "arr = np.zeros((num_examples, width, height, channels))\n",
-    "arr[i, :, :, :] = img\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
