--- a/model.ipynb
+++ b/model.ipynb
@@ -3,6 +3,35 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "Read CSV\n",
+    "Generate Table with headings\n",
+    "Generate y_train data\n",
+    "    Read Steering Angle\n",
+    "Generate X_train data\n",
+    "    Read images (center, left, right) using filename\n",
+    "    Crop\n",
+    "    Augment\n",
+    "        Flip,resize - append(y_train, offset)\n",
+    "        Noise, resize - append(y_train, offset)\n",
+    "        blur, resize - append(y_train, offset)\n",
+    "\n",
+    "Neural Network Implmentation\n",
+    "training, validation, testing split\n",
+    "Generator Function\n",
+    "\n",
+    "Neural Network Training\n",
+    "Save Model\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
     "collapsed": true,
     "deletable": true,
     "editable": true
@@ -15,7 +44,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -31,7 +62,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -44,7 +77,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -53,7 +88,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Read Image, Crop and Resize"
    ]
@@ -62,8 +100,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "scrolled": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -73,7 +112,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Features"
    ]
@@ -83,6 +125,8 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "scrolled": false
    },
    "outputs": [],
@@ -92,7 +136,7 @@
     "num_samples = len(data)\n",
     "i=0\n",
     "for row in data['center']:\n",
-    "    #print(i)\n",
+    "#     print(i)\n",
     "    I = cv2.imread(img_path)\n",
     "    b,g,r = cv2.split(I)\n",
     "    I = cv2.merge([r,g,b])\n",
@@ -111,8 +155,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "print(type(I))"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Labels"
    ]
@@ -121,24 +181,33 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
     "# Convert a pandas dataframe (df) to a numpy ndarray\n",
-    "y_train = data['steering'].values"
+    "y_train = data['steering'].values\n",
+    "print(y_train.shape)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Create Features and Labels"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Preprocess the Data\n",
     "1.) Shuffle the data\n",
@@ -152,7 +221,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -164,7 +235,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -175,7 +248,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -191,11 +266,147 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
     "arr.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "### Generator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "import sklearn\n",
+    "import pandas\n",
+    "from sklearn.utils import shuffle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "shuffle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "def myGenerator(samples, batch_size=32):\n",
+    "    num_samples = len(samples)\n",
+    "    while 1: # loop forever so generator never terminates\n",
+    "        shuffle(samples)\n",
+    "        for offset in range(0, num_samples, batch_size):\n",
+    "            batch_samples = samples[offset:offset+batch_size]\n",
+    "\n",
+    "            images = []\n",
+    "            angles = []\n",
+    "            for batch_sample in batch_samples:\n",
+    "                name = './IMG'+batch_sample[0].split('/')[-1]\n",
+    "                center_image = cv2.imreade(name)\n",
+    "                center_angle = float(batch_sample[3])\n",
+    "                images.append(center_image)\n",
+    "                angles.append(center_angle)\n",
+    "\n",
+    "            X_train = np.array(images)\n",
+    "            y_train = np.array(angles)\n",
+    "            yield shuffle(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "# compile and train the model using generator function\n",
+    "train_generator = myGenerator(train_samples, batch_size=32)\n",
+    "validation_generator = myGenerator(validation_samples, batch_size=32)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "## Keras Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "from keras.models import Sequential\n",
+    "from keras.layers import Activation, Convolution2D, Dense, Dropout, Flatten, Lambda, MaxPooling2D\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "model = Sequential()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "model.add(Lambda.)\n",
+    "model.add(Convolution2D(32,3,3,init='glorot_uniform',activation='relu',border_mode='valid', input_shape=(3,100,100)))\n"
    ]
   },
   {
