--- a/model.ipynb
+++ b/model.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -372,13 +372,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "from keras.models import Sequential\n",
     "from keras.layers import Activation, Convolution2D, Dense, Dropout, Flatten, Lambda, MaxPooling2D\n"
@@ -386,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -394,19 +402,60 @@
    },
    "outputs": [],
    "source": [
-    "model = Sequential()"
+    "ch, row, col = 3,64,64"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
-    "model.add(Lambda.)\n",
-    "model.add(Convolution2D(32,3,3,init='glorot_uniform',activation='relu',border_mode='valid', input_shape=(3,100,100)))\n"
+    "model = Sequential()\n",
+    "\n",
+    "model.add(Lambda(lambda x: x/127.5-1., input_shape=(col, row, ch), output_shape=(col, row, ch)))\n",
+    "\n",
+    "\n",
+    "model.add(Convolution2D(24,5,5, init='glorot_uniform', border_mode='valid', activation='relu'))\n",
+    "model.add(MaxPooling2D(pool_size=(2,2), strides=(1, 1)))\n",
+    "\n",
+    "model.add(Convolution2D(36,5,5, init='glorot_uniform', border_mode='valid', activation='relu'))\n",
+    "model.add(MaxPooling2D(pool_size=(2,2), strides=(1, 1)))\n",
+    "\n",
+    "model.add(Convolution2D(48,5,5, init='glorot_uniform', border_mode='valid', activation='relu'))\n",
+    "model.add(MaxPooling2D(pool_size=(2,2), strides=(1, 1)))\n",
+    "\n",
+    "model.add(Convolution2D(64,3,3, init='glorot_uniform', border_mode='valid', activation='relu'))\n",
+    "model.add(MaxPooling2D(pool_size=(2,2), strides=(1, 1)))\n",
+    "\n",
+    "model.add(Convolution2D(64,3,3, init='glorot_uniform', border_mode='valid', activation='relu'))\n",
+    "model.add(MaxPooling2D(pool_size=(2,2), strides=(1, 1)))\n",
+    "\n",
+    "model.add(Flatten())\n",
+    "model.add(Dropout(0.2))\n",
+    "model.add(Activation('relu'))\n",
+    "\n",
+    "model.add(Dense(1164))\n",
+    "model.add(Dropout(0.5))\n",
+    "model.add(Activation('relu'))\n",
+    "\n",
+    "model.add(Dense(100))\n",
+    "model.add(Dropout(0.5))\n",
+    "model.add(Activation('relu'))\n",
+    "\n",
+    "model.add(Dense(50))\n",
+    "model.add(Dropout(0.5))\n",
+    "model.add(Activation('relu'))\n",
+    "\n",
+    "model.add(Dense(10))\n",
+    "model.add(Dropout(0.5))\n",
+    "model.add(Activation('relu'))\n",
+    "\n",
+    "model.add(Dense(1))"
    ]
   },
   {
