updated model and generator

--- a/model.ipynb
+++ b/model.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -77,7 +77,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
@@ -164,7 +164,8 @@
    },
    "outputs": [],
    "source": [
-    "print(type(I))"
+    "print(type(I))\n",
+    "print(I.shape)"
    ]
   },
   {
@@ -227,33 +228,6 @@
    },
    "outputs": [],
    "source": [
-    "data.shape\n",
-    "len(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "I.shape[2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
     "# https://carnd-forums.udacity.com/questions/32716893/\n",
     "# does-anyone-know-how-to-make-multiple-images-into-4d-arrays-like-pickled-data#\n",
     "#arr = np.zeros((num_examples, width, height, channels))\n",
@@ -274,6 +248,22 @@
    "source": [
     "arr.shape"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reading Images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -298,20 +288,48 @@
    "source": [
     "import sklearn\n",
     "import pandas\n",
-    "from sklearn.utils import shuffle"
+    "from sklearn.utils import shuffle\n",
+    "import csv"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
    "outputs": [],
    "source": [
-    "shuffle"
+    "samples = []\n",
+    "with open('./CarSim_data/driving_log.csv') as csvfile:\n",
+    "    reader = csv.reader(csvfile)\n",
+    "    for line in reader:\n",
+    "        samples.append(line)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "train_samples, validation_samples = train_test_split(samples, test_size=0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "print(len(train_samples))"
    ]
   },
   {
@@ -334,13 +352,16 @@
     "            images = []\n",
     "            angles = []\n",
     "            for batch_sample in batch_samples:\n",
-    "                name = './IMG'+batch_sample[0].split('/')[-1]\n",
-    "                center_image = cv2.imreade(name)\n",
+    "                name = './CarSim_data/IMG/'+batch_sample[0].split('/')[-1]\n",
+    "                print(name)\n",
+    "                center_image = cv2.imread(name)\n",
+    "                print(center_image.shape)\n",
     "                center_angle = float(batch_sample[3])\n",
     "                images.append(center_image)\n",
     "                angles.append(center_angle)\n",
     "\n",
     "            X_train = np.array(images)\n",
+    "            print(X_train.shape)\n",
     "            y_train = np.array(angles)\n",
     "            yield shuffle(X_train, y_train)"
    ]
@@ -361,6 +382,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "type(train_generator)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "deletable": true,
@@ -372,21 +404,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from keras.models import Sequential\n",
     "from keras.layers import Activation, Convolution2D, Dense, Dropout, Flatten, Lambda, MaxPooling2D\n"
@@ -394,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -402,12 +426,12 @@
    },
    "outputs": [],
    "source": [
-    "ch, row, col = 3,64,64"
+    "ch, row, col = 3,320,160"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -456,6 +480,30 @@
     "model.add(Activation('relu'))\n",
     "\n",
     "model.add(Dense(1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "model.compile(loss='mse', optimizer='adam')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "model.fit_generator(train_generator, samples_per_epoch=len(train_samples), validation_data=validation_generator, nb_val_samples=len(validation_samples), nb_epoch=3)"
    ]
   },
   {
