Updated augmentation functions

--- a/model.ipynb
+++ b/model.ipynb
@@ -31,7 +31,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### TUNING PARAMETERS"
    ]
@@ -40,13 +43,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
     "# Steering Angle Offset\n",
     "# Note: Steering Angle is normalized to -1 and 1\n",
-    "steering_ang_offset = 0.1"
+    "steering_ang_offset = 5"
    ]
   },
   {
@@ -94,102 +99,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "# data.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "### Features"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "img_path = data['center'][1]\n",
-    "#print(img_path)\n",
-    "num_samples = len(data)\n",
-    "i=0\n",
-    "for row in data['center']:\n",
-    "#     print(i)\n",
-    "    I = cv2.imread(img_path)\n",
-    "    b,g,r = cv2.split(I)\n",
-    "    I = cv2.merge([r,g,b])\n",
-    "    #cv2.imwrite('I.jpg',I)\n",
-    "#     I = I[50:,:]\n",
-    "#     I = cv2.resize(I,None,fx=0.25,fy=0.25,interpolation=cv2.INTER_AREA)\n",
-    "    plt.imshow(I)\n",
-    "    \n",
-    "    # https://carnd-forums.udacity.com/questions/32716893/\n",
-    "    # does-anyone-know-how-to-make-multiple-images-into-4d-arrays-like-pickled-data#\n",
-    "    #arr = np.zeros((num_examples, width, height, channels))\n",
-    "\n",
-    "    X_train = np.zeros((num_samples, I.shape[0], I.shape[1], I.shape[2]))\n",
-    "    X_train[i, :, :, :] = I\n",
-    "    i=i+1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "print(type(I))\n",
-    "print(I.shape)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "### Labels"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "# Convert a pandas dataframe (df) to a numpy ndarray\n",
-    "y_train = data['steering'].values\n",
-    "print(y_train.shape)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "deletable": true,
@@ -200,33 +109,53 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "def i_crop(I):\n",
+    "    return I[55:135,:]\n",
+    "\n",
+    "def i_resize(I):\n",
+    "    return cv2.resize(I,(64, 64),interpolation=cv2.INTER_AREA)\n",
+    "\n",
+    "def i_flip(I, steering):\n",
+    "    return cv2.flip(I,1), -steering\n",
+    "    \n",
+    "def i_bright(I):\n",
+    "    I = cv2.cvtColor(I, cv2.COLOR_RGB2HSV)\n",
+    "    I[:,:,2] = I[:,:,2]+(np.random.uniform(-20,20))\n",
+    "    return cv2.cvtColor(I, cv2.COLOR_HSV2RGB)    "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "deletable": true,
     "editable": true
    },
    "source": [
-    "### Preprocess the Data\n",
-    "1.) Shuffle the data\n",
-    "\n",
-    "2.) Normalize the features using Min-Max scaling between -0.5 and 0.5\n",
-    "\n",
-    "3.) Steering Angle: -25 to 25\n"
+    "### Image Procesing Playground"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "scrolled": true
    },
    "outputs": [],
    "source": [
-    "def i_crop(I):\n",
-    "    return I[50:,:]\n",
-    "\n",
-    "def i_resize(I):\n",
-    "    return cv2.resize(I,None,fx=0.25,fy=0.25,interpolation=cv2.INTER_AREA)"
+    "# II = cv2.imread('./CarSim_data/IMG/left_2017_03_07_10_23_30_722.jpg')\n",
+    "# plt.imshow(II)"
    ]
   },
   {
@@ -260,6 +189,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "## Learning: Important to cast to float. For example: float(line[3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
@@ -267,10 +207,31 @@
    "outputs": [],
    "source": [
     "samples = []\n",
+    "hist_angle = []\n",
     "with open('./CarSim_data/driving_log.csv') as csvfile:\n",
     "    reader = csv.reader(csvfile)\n",
     "    for line in reader:\n",
-    "        samples.append(line)"
+    "        if float(line[3]) == 0:\n",
+    "            if np.random.random() < 0.08:\n",
+    "                hist_angle.append(float(line[3]))\n",
+    "                samples.append(line)\n",
+    "        else:\n",
+    "            hist_angle.append(float(line[3]))\n",
+    "            samples.append(line)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "plt.hist(hist_angle, bins = 40);\n",
+    "plt.xlabel('Steering Angles')\n",
+    "plt.ylabel('Frequency')\n",
+    "plt.title('Steering Angle Histogram')"
    ]
   },
   {
@@ -349,7 +310,7 @@
    },
    "outputs": [],
    "source": [
-    "ch, row, col = 3,320,110"
+    "ch, row, col = 3,64,64"
    ]
   },
   {
@@ -435,11 +396,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
-    "def myGenerator(samples, batch_size=32):\n",
+    "def myGenerator(samples, batch_size):\n",
     "    num_samples = len(samples)\n",
     "    while 1: # loop forever so generator never terminates\n",
     "        shuffle(samples)\n",
@@ -455,48 +418,52 @@
     "            angles = []\n",
     "            \n",
     "            for batch_sample in batch_samples:\n",
-    "                # Center Image\n",
-    "                name = batch_sample[0].strip()\n",
-    "                center_image = cv2.imread(name)\n",
-    "                center_image = i_crop(center_image)\n",
-    "                print(center_image.shape)\n",
-    "#                 center_image = i_resize(center_image)\n",
     "                \n",
+    "                # Center Image ===================\n",
+    "                name = batch_sample[0].strip()\n",
+    "                center_image = i_resize(i_crop(cv2.imread(name)))\n",
+    "                center_angle = float(batch_sample[3])               \n",
     "                images.append(center_image)\n",
-    "#                 print('Length of Image List (Batch Sample Number): ', len(images))\n",
-    "                # Center Angle\n",
-    "                center_angle = float(batch_sample[3])\n",
     "                angles.append(center_angle)\n",
-    "\n",
-    "                # Left Image\n",
+    "                \n",
+    "                center_image, center_angle = i_flip(center_image, center_angle)                \n",
+    "                images.append(center_image)\n",
+    "                angles.append(center_angle)\n",
+    "                \n",
+    "            \n",
+    "            \n",
+    "                # Left Image =====================\n",
     "                name = batch_sample[1].strip()\n",
-    "                left_image = cv2.imread(name)\n",
-    "                left_image = i_crop(left_image)\n",
-    "#                 left_image = i_resize(left_image)\n",
-    "                images.append(left_image)\n",
-    "                # Left Angle\n",
+    "                left_image = i_resize(i_crop(cv2.imread(name)))\n",
     "                left_angle = float(batch_sample[3])-steering_ang_offset\n",
+    "                images.append(left_image)\n",
     "                angles.append(left_angle)\n",
-    "\n",
+    "                \n",
+    "                left_image, left_angle = i_flip(left_image, left_angle)                \n",
+    "                images.append(left_image)\n",
+    "                angles.append(left_angle)\n",
+    "                \n",
     "                # Right Image\n",
     "                name = batch_sample[2].strip()\n",
-    "                right_image = cv2.imread(name)\n",
-    "                right_image = i_crop(right_image)\n",
-    "#                 right_image = i_resize(right_image)\n",
-    "                images.append(right_image)\n",
-    "                plt.imshow(right_image)\n",
-    "                # Right Angle\n",
+    "                right_image = i_resize(i_crop(cv2.imread(name)))\n",
     "                right_angle = float(batch_sample[3])+steering_ang_offset\n",
+    "                images.append(right_image)\n",
     "                angles.append(right_angle)\n",
+    "                \n",
+    "                right_image, right_angle = i_flip(right_image, right_angle)                \n",
+    "                images.append(right_image)\n",
+    "                angles.append(right_angle)\n",
+    "                \n",
     "                         \n",
     "            X_train = np.array(images)\n",
+    "            print('X_train Shape')\n",
     "            print(X_train.shape)\n",
     "            print('>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>')\n",
     "            print(' ')\n",
     "            y_train = np.array(angles)\n",
     "            \n",
     "            # for logging\n",
-    "            batch_num_idx += 1\n",
+    "            batch_num_idx = batch_num_idx+1\n",
     "            \n",
     "            yield shuffle(X_train, y_train)"
    ]
@@ -505,13 +472,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
     "# compile and train the model using generator function\n",
-    "train_generator = myGenerator(train_samples, batch_size=32)\n",
-    "validation_generator = myGenerator(validation_samples, batch_size=32)"
+    "train_generator = myGenerator(train_samples, batch_size=256)\n",
+    "validation_generator = myGenerator(validation_samples, batch_size=256)"
    ]
   },
   {
@@ -557,19 +526,6 @@
     "# model.save_weights will only save the weights\n",
     "model.save('model.h5')\n",
     "print(\"Model Saved\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "len(y_train)"
    ]
   }
  ],
